--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links:
   dribbble:
   email: oosenbrug@gmail.com
-  facebook:
+  facebook: 
   flickr:
   github: eoosen
   instagram: eoosen
-  linkedin: oosenbrug@gmail.com
+  linkedin: eric-oosenbrug-5a123a109
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: eric_o
